Fix runecarving recipe errors in JEI integration